# plagiasm-detector

./: DEVELOPER_GUIDE.md  README.md
backend/: .env.docker  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py
backend/app/api/v1/: routes.py
backend/app/core/: celery.py  config.py
backend/app/models/: batch.py  comparison.py
backend/app/services/: batch_processing.py  parsing.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AIDetectionPage.tsx  BatchResultsPage.tsx  BatchesPage.tsx  DashboardPage.tsx  Navbar.tsx  UploadForm.tsx
